--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #d96f61;
+    background-color: #7cdcff;
     border-radius: 14px;
     border: 3px solid var(--primary);
 }
