--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@500&display=swap');
 
 /*Scroll bar */
 *::-webkit-scrollbar {
